# Tavern

./: .gitignore  README.md  Tavern.code-workspace
Tavern/: index.html  package-lock.json  package.json
Tavern/src/: App.css  App.tsx
Tavern/src-tauri/: Cargo.toml  tauri.conf.json
Tavern/src-tauri/.sqlx/: query-1827f3b4da99a77d05c4b35c94f2362fa89690bd47b054d790d465e88423afa4.json  query-3c63dbae3d5c7e2dbbbc88faa17a2a92180cfe8b063039ff06023d4bcf2ae0ec.json  query-3d7780da36b7549ae1f39f678d298166b03ceb0f52f398c37cbe1ea702858896.json  query-3e9d0b064996101f0eb741f1d327466705a582f76cbcd584d2f125ccb8ebd318.json  query-4e0252adcdb11ccfcc267d7af3d75c7d96f02170b33a586cf57556bb4acd9342.json  query-54ac9fd50694c54e21949f5ccc74c39314ffaef6f8a3de35e9f3d345f6910073.json  query-7ee96ea575f6dc9846f77f7a2926e5a2924cce8cd53f1591c65ef4d37f462117.json  query-847d61ff4d34784642984058471ca4a81d822af8ca1fe04ea5cbc0ab0ee74a24.json  query-9980b6d511ce4e33b45b16dc1a39c0f2320dc3f455c59e51d176f22877621c6f.json  query-a5a9aee294e10db3da13cc320ca7b163bc6f4ec0371ae4a99a8aa84353316425.json  query-e5189cd6dddcfa9d0014638e8064d73f6019352c54236bf0a5d48c0954aed0ec.json
Tavern/src-tauri/data/: tavern.db
Tavern/src-tauri/migrations/: 20250716041726_init.sql
Tavern/src-tauri/src/: commands.rs  errors.rs  main.rs  state.rs
Tavern/src-tauri/src/database/: mod.rs  models.rs
Tavern/src-tauri/src/networking/: mod.rs
Tavern/src/components/Canvas/: DatabaseDisplay.tsx  GameBoard.tsx  MapDisplay.tsx  PixiDisplay.tsx  TokenDisplay.tsx  TokenGrid.tsx
Tavern/src/components/Character/: TokenCreator.tsx
Tavern/src/components/UI/: PixiViewport.tsx  Sidebar.tsx
Tavern/src/contexts/: ThemeContext.tsx
Tavern/src/types/: theme.ts
Tavern/src/utils/: themes.ts
