[package]
name = "tavern"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tavern_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls" ] }
chrono = "0.4.41"
uuid = "1.17.0"
anyhow = "1.0.98"
thiserror = "2.0.12"
tracing-subscriber = "0.3.19"
webrtc = "0.13.0"
quinn = "0.11.8"
rand = "0.9.1"
image = "0.25.6"
rodio = "0.20.1"
rfd = "0.15.3"
