[package]
name = "tavern"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tavern_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sqlx = { version = "0.8", features = [ "sqlite", "chrono", "runtime-tokio", "tls-native-tls" ] }
chrono = { version = "0.4.41", features = ["serde"] }
uuid = "1.17.0"
anyhow = "1.0.98"
thiserror = "2.0.12"
webrtc = "0.13.0"
quinn = "0.11.8"
rand = "0.9.1"
image = "0.25.6"
rodio = "0.20.1"
rfd = "0.15.3"
dotenv = "0.15"
tauri-plugin-shell = "2.3.0"
tauri-plugin-fs = "2.4.0"
tauri-plugin-dialog = "2.3.0"
tauri-plugin-window-state = "2.3.0"
tauri-plugin-autostart = "2.5.0"
tauri-plugin-store = "2.3.0"
tokio = "1.46.1"
